<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="0.00"
        android:ems="10"
        android:hint="@string/title"
        android:textColorHint="#666666"
        android:textSize="35sp" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:textColorHint="#666666"
        android:gravity="top|left"
        android:layout_weight="1.05"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/post"
            android:layout_width="220dp"
            android:layout_height="69dp"
            android:text="@string/post"
            android:background="@drawable/btn_publish_shape"
            android:textColor="#000000"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>